--- a/style.css
+++ b/style.css
@@ -2,7 +2,11 @@
   padding: 0px;
   margin: 0px;
 }
-
+* {
+  margin: 0px;
+  padding: 0px;
+  font-family: sans-serif;
+}
 .hero {
   height: 100%;
   width: 100%;
@@ -19,12 +23,13 @@
   margin: 6% auto;
   background: #fff;
   padding: 5px;
+  overflow: hidden;
 }
 .button-box {
   width: 220px;
   margin: 35px auto;
   position: relative;
-  box-shadow: 0 0 20px 4px rgb(16, 179, 207);
+  box-shadow: 0 0 20px 2px rgb(16, 179, 207);
   border-radius: 30px;
 }
 .toogle-btn {
@@ -43,16 +48,16 @@
   height: 100%;
   border-radius: 30px;
   transition: 0.5s;
-  background: linear-gradient(to right, rgb(16, 179, 207), rgb(92, 197, 216));
+  background: linear-gradient(to right, rgb(5, 177, 207), rgb(118, 191, 204));
 }
 .social-icons {
   margin: 30px auto;
   text-align: center;
 }
 .social-icons img {
-  width: 30px;
+  width: 35px;
   margin: 0px 12px;
-  box-shadow: 0 0 20px 0px rgb(16, 179, 207);
+  box-shadow: 0 0 5px 0px rgb(16, 179, 207);
   cursor: pointer;
   border-radius: 50%;
 }
@@ -72,4 +77,30 @@
   border-bottom: 1px solid #999;
   outline: none;
   background: transparent;
+}
+.submit-btn {
+  width: 85%;
+  padding: 10px 30px;
+  cursor: pointer;
+  display: block;
+  margin: auto;
+  border: none;
+  outline: none;
+  border-radius: 30px;
+  background: linear-gradient(to right, rgb(16, 179, 207), rgb(92, 197, 216));
+}
+.check-box {
+  margin: 30px 10px 30px 0px;
+}
+span {
+  color: #777;
+  font-size: 12px;
+  bottom: 65px;
+  position: absolute;
+}
+#login {
+  left: 50px;
+}
+#register {
+  left: 450px;
 }
