--- a/style.css
+++ b/style.css
@@ -8,22 +8,30 @@
   font-family: sans-serif;
 }
 .hero {
-  height: 100%;
+  height: 100vh;
   width: 100%;
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
     url(./Images/banner.jpg);
   background-position: center;
   background-size: cover;
   position: absolute;
+  display: flex;
+  justify-items: center;
+  align-items: center;
 }
 .form-box {
   width: 380px;
   height: 480px;
   position: relative;
-  margin: 6% auto;
+  margin: auto;
   background: #fff;
   padding: 5px;
   overflow: hidden;
+}
+.form-box:hover {
+  -webkit-box-shadow: 0px 0px 15px -4px rgba(255, 255, 255, 1);
+  -moz-box-shadow: 0px 0px 15px -4px rgba(255, 255, 255, 1);
+  box-shadow: 0px 0px 15px -4px rgba(255, 255, 255, 1);
 }
 .button-box {
   width: 220px;
@@ -61,6 +69,9 @@
   box-shadow: 0 0 5px 0px rgb(16, 179, 207);
   border-radius: 50%;
 }
+.social-icons img:hover {
+  transform: scale(1.05);
+}
 .input-group {
   top: 180px;
   position: absolute;
@@ -88,6 +99,9 @@
   outline: none;
   border-radius: 30px;
   background: linear-gradient(to right, rgb(5, 177, 207), rgb(147, 203, 212));
+}
+.submit-btn:hover {
+  transform: scale(1.05);
 }
 .check-box {
   margin: 30px 10px 30px 0px;
