--- a/login1/code/style.css
+++ b/login1/code/style.css
@@ -11,7 +11,7 @@
   height: 100vh;
   width: 100%;
   background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url(./Images/banner.jpg);
+    url(../Images/banner.jpg);
   background-position: center;
   background-size: cover;
   position: absolute;
