--- a/Todist/todolist page/style.css
+++ b/Todist/todolist page/style.css
@@ -8,14 +8,21 @@ body {
   height: 100%;
   background-color: #111;
   box-sizing: border-box;
+  width: 100%;
+  height: 100vh;
+  background-image: url(wall3.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 h1 {
   color: #fff;
-  font-size: 3rem;
+  font-size: 4rem;
   font-weight: 50;
   text-align: center;
-  margin: 1rem 0 3rem;
+  margin: 1rem 0 1rem;
   font-family: "Hind", sans-serif;
 }
 
@@ -24,7 +31,27 @@ h1 {
   text-transform: uppercase;
   font-weight: 800;
 }
+.title2 {
+  font-size: 3rem;
+  color: aqua;
+  text-transform: uppercase;
+  font-weight: 800;
+}
+a:link {
+  color: aqua;
+}
 
+a:visited {
+  color: aqua;
+}
+
+a:hover {
+  color: orange;
+}
+
+a:active {
+  color: aqua;
+}
 .inputDiv {
   display: flex;
   justify-content: center;
@@ -49,7 +76,7 @@ h1 {
   height: 50px;
   border-radius: 25px;
   width: 50px;
-  background-color: lime;
+  background-color: rgb(9, 201, 9);
   color: white;
   cursor: pointer;
   transition: 0.5s;
@@ -57,7 +84,7 @@ h1 {
 }
 
 .add:hover {
-  opacity: 0.7;
+  opacity: 0.9;
 }
 
 .container {
@@ -99,7 +126,7 @@ h1 {
   background: none;
   outline: none;
   border: none;
-  color: #e00;
+  color: crimson;
   font-size: 1.4rem;
   font-family: "Hind", sans-serif;
   cursor: pointer;
